2001-02-18  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>

	* sysdeps/mips/bsd-_setjmp.S (_setjmp): Reorder instructions to
	avoid problems on MIPS I.
	* sysdeps/mips/bsd-setjmp.S (setjmp): Likewise.

	* sysdeps/mips/dl-machine.h (RTLD_START): Remove duplicate ".set
	noreorder".

2001-02-21  Ulrich Drepper  <drepper@redhat.com>

	* posix/fnmatch_loop.c: Handle ranges outside glibc correctly.

	* sysdeps/generic/ftime.c: Include <time.h>.

	* configure.in: Don't check for libgd if user set --without-gd.
	Patch by Achim Gottinger <achim@gentoo.org>.

	* sysdeps/i386/i686/strtok.S: Continue to return NULL after the
	first time this happened.
	* string/Makefile (tests): Add tst-strtok.

2001-02-21  Andreas Jaeger  <aj@suse.de>

	* string/tst-strtok.c: New testcase, reported by
	Andrew Church <achurch@achurch.org>.

2001-02-20  Ulrich Drepper  <drepper@redhat.com>

	* libio/iofwide.c: Remove fwide alias.

2001-02-20  Andreas Jaeger  <aj@suse.de>

	* iconvdata/Makefile (tests): Only run mtrace-tst-loading if perl
	is available.
	Reported by Achim Gottinger <achim@gentoo.org>.

2001-02-19  Ulrich Drepper  <drepper@redhat.com>

	* iconv/tst-iconv1.c (main): Remove debugging code.

	* sysdeps/ieee754/flt-32/e_powf.c: Handle x == +-1 correctly.
	* sysdeps/ieee754/dbl-64/e_pow.c: Likewise.

	* sysdeps/generic/e_scalb.c: Set invalid exception for invalid
	parameters.
	* sysdeps/generic/e_scalbf.c: Likewise.
	* sysdeps/generic/e_scalbl.c: Likewise.

	* sysdeps/ia64/fpu/Makefile (libm-sysdep-routines): Add libm_error,
	libm_frexp4, libm_frexp4f, libm_frexp4l, and all the functions also
	in libc.
	(routines): Replace libm_error with libc_libm_error.
	* sysdeps/ia64/fpu/Dist: Add libc_libm_error.c.
	* sysdeps/ia64/fpu/libc_libm_error.c: New file.

2001-02-18  Mark Kettenis  <kettenis@gnu.org>

	* malloc/mtrace.c [USE_IN_LIBIO]: Define fopen as _IO_fopen64.
	(mtrace): Revert 2001-02-13 patch: use fopen instead of fopen64.

2001-02-17  H.J. Lu  <hjl@gnu.org>
