@@ -1,3 +1,7 @@
+2001-02-22  Andreas Jaeger  <aj@suse.de>
+
+	* math/Makefile: Remove omit-long-double-fcts.
+
 2001-02-18  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>
 
 	* sysdeps/mips/bsd-_setjmp.S (_setjmp): Reorder instructions to
